tests/rosetta/out/C/atomic-updates.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:47Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:47Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
list_int randOrder(int seed, int n) {
  int next = (seed * 1664525 + 1013904223) % 2147483647;
  list_int tmp1 = list_int_create(2);
  tmp1.data[0] = next;
  tmp1.data[1] = next % n;
  return tmp1;
}

list_int randChaos(int seed, int n) {
  int next = (seed * 1103515245 + 12345) % 2147483647;
  list_int tmp2 = list_int_create(2);
  tmp2.data[0] = next;
  tmp2.data[1] = next % n;
  return tmp2;
}

int main() {
  int nBuckets = 10;
  int initialSum = 1000;
  list_int buckets = list_int_create(0);
  for (int i = 0; i < nBuckets; i++) {
    buckets = 0;
  }
  int i = nBuckets;
  int dist = initialSum;
  while (i > 0) {
    double v = ((double)dist) / ((double)i);
    i = i - 1;
    buckets.data[i] = v;
    dist = dist - v;
  }
  int tc0 = 0;
  int tc1 = 0;
  int total = 0;
  int nTicks = 0;
  int seedOrder = 1;
  int seedChaos = 2;
  printf("sum  ---updates---    mean  buckets\n");
  int t = 0;
  while (t < 5) {
    list_int r = randOrder(seedOrder, nBuckets);
    seedOrder = r.data[0];
    int b1 = r.data[1];
    int b2 = (b1 + 1) % nBuckets;
    int v1 = buckets.data[b1];
    int v2 = buckets.data[b2];
    if ((v1 > v2)) {
      int a = (int)(((v1 - v2) / 2));
      if ((a > buckets.data[b1])) {
        a = buckets.data[b1];
      }
      buckets.data[b1] = buckets.data[b1] - a;
      buckets.data[b2] = buckets.data[b2] + a;
    } else {
      int a = (int)(((v2 - v1) / 2));
      if ((a > buckets.data[b2])) {
        a = buckets.data[b2];
      }
      buckets.data[b2] = buckets.data[b2] - a;
      buckets.data[b1] = buckets.data[b1] + a;
    }
    tc0 = tc0 + 1;
    r = randChaos(seedChaos, nBuckets);
    seedChaos = r.data[0];
    b1 = r.data[1];
    b2 = (b1 + 1) % nBuckets;
    r = randChaos(seedChaos, buckets.data[b1] + 1);
    seedChaos = r.data[0];
    int amt = r.data[1];
    if ((amt > buckets.data[b1])) {
      amt = buckets.data[b1];
    }
    buckets.data[b1] = buckets.data[b1] - amt;
    buckets.data[b2] = buckets.data[b2] + amt;
    tc1 = tc1 + 1;
    int sum = 0;
    int idx = 0;
    while (idx < nBuckets) {
      sum = sum + buckets.data[idx];
      idx = idx + 1;
    }
    total = total + tc0 + tc1;
    nTicks = nTicks + 1;
    char *tmp3 = _str(sum);
    char *tmp4 = concat_string(tmp3, " ");
    char *tmp5 = _str(tc0);
    char *tmp6 = concat_string(tmp4, tmp5);
    char *tmp7 = concat_string(tmp6, " ");
    char *tmp8 = _str(tc1);
    char *tmp9 = concat_string(tmp7, tmp8);
    char *tmp10 = concat_string(tmp9, " ");
    char *tmp11 = _str(((double)total) / ((double)nTicks));
    char *tmp12 = concat_string(tmp10, tmp11);
    char *tmp13 = concat_string(tmp12, "  ");
    char *tmp14 = _str(buckets);
    char *tmp15 = concat_string(tmp13, tmp14);
    char *tmp16 = _str(sum);
    char *tmp17 = concat_string(tmp16, " ");
    char *tmp18 = _str(tc0);
    char *tmp19 = concat_string(tmp17, tmp18);
    char *tmp20 = concat_string(tmp19, " ");
    char *tmp21 = _str(tc1);
    char *tmp22 = concat_string(tmp20, tmp21);
    char *tmp23 = concat_string(tmp22, " ");
    char *tmp24 = _str(((double)total) / ((double)nTicks));
    char *tmp25 = concat_string(tmp23, tmp24);
    char *tmp26 = concat_string(tmp25, "  ");
    char *tmp27 = _str(buckets);
    char *tmp28 = concat_string(tmp26, tmp27);
    printf("%d\n", tmp28);
    tc0 = 0;
    tc1 = 0;
    t = t + 1;
  }
}

int main() {
  main();
  return 0;
}
